fixed alignment issue that was not there previously but showed up randomly

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,7 +42,7 @@ border-color: grey;
 
 .urlinput{
 margin-top: 30px;
-margin-left: -80px;
+margin-left: 200px;
 border-style: inset;
 border-color: grey;
 }
