--- a/client/src/components/AddButton/AddButton.css
+++ b/client/src/components/AddButton/AddButton.css
@@ -2,8 +2,9 @@
     width: 100px;
     height: 40px;
     background-color:red;
-    margin-left: 500px;
-    margin-top: -30px;
+    margin-left: 400px;
+    margin-top: 25px;
+    margin-right: 30px;
     border-style: inset;
     border-color: grey;
     border-width: 7px;
